--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Esse é um projeto para melhorar o conhecimento em TS, node e javascript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -e ts,json,mustache src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,12 @@
   },
   "homepage": "https://github.com/franciscokkkjjjk/projeto-node-ts#readme",
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/express": "^4.17.15",
+    "@types/mustache-express": "^1.2.2",
+    "@types/node": "^18.11.18",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mustache": "^4.2.0",
+    "mustache-express": "^1.3.2"
   }
 }
