--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "Esse é um projeto para melhorar o conhecimento em TS, node e javascript",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e ts,json,mustache src/server.ts"
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,7 @@
     "@types/express": "^4.17.15",
     "@types/mustache-express": "^1.2.2",
     "@types/node": "^18.11.18",
+    "copyfiles": "^2.4.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mustache": "^4.2.0",
