--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
+    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js"
   },
